My Portfolio Site

--- a/index.html
+++ b/index.html
@@ -1,44 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  
-  <title>Neat Code Sample</title>
-  
-  <!-- Latest compiled and minified CSS & JS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Home | Basic Portfolio</title>
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <div class="abc">
-        <div class="def">
-            <h1><center>This is my H1</center></h1>
-            <h3><center>Blah Blah Blah</center></h3> 
-            <h3><center>Yadda Yadda Yadda</center></h3>
-            <a href="akdjasdfja"><button type="button" class="btn btn-primary"><span class="fa fa-search"></span>  Button</button></a>
-            <br><br><br>
+    <header>
+        <div class="wrapper">
+            <h1>Aditya Shah</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
         </div>
-    </div>
-  
-    <div class="panel panel-default">
-        <div class="panel-body" id="friends-panel">
-            
-            <h4>List Number 1</h4>
-            <ol>
-                <li>Item 1</li>
-                <li>Item 2</li>
-                <li>Item 3</li>
-            </ol>
-            <h4>List 2</h4>
-            <ul>
-                <li>A</li>
-                <li>B</li>
-            </ul>
-        </div>
-    </div>
+    </header>
+
+<div class="wrapper">
+    <section id="left-column">
+        <h2>About Me</h2>
+
+        <img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/11045440_10100145723223277_137641853189494299_n.jpg?_nc_cat=0&oh=fc82078f7744dafa895c2826a44f1f25&oe=5B54B0BD" alt="Picture of Aditya Shah" class="inline-img"height="200" width="200"/>
+
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
+        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+
+    </section>
+    <aside id="righ-column">
+    </aside>
+</div>
+<div class="clearfix"></div>
+
+<footer>
+    &copy;2018 Aditya Shah
+</footer>
+
 </body>
 </html>
-
-
-1 CommentCollapse 
-
