small css update

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
     </header>
 
 <div class="wrapper">
-    <section id="left-column">
+    <section id="center-column">
         <h2>My Portfolio</h2>
 
        <div class="portfolio-item" id="image1">
@@ -52,8 +52,7 @@
 
     
     </section>
-    <aside id="righ-column">
-    </aside>
+
 </div>
 <div class="clearfix"></div>
 
