--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     </header>
 
 <div class="wrapper">
-    <section id="left-column">
+    <section id="center-column">
         <h2>Contact</h2>
 
        <form >
@@ -40,8 +40,7 @@
        </form> 
     
     </section>
-    <aside id="righ-column">
-    </aside>
+    
 </div>
 <div class="clearfix"></div>
 
