--- a/Bootstrap-Portfolio/contact.html
+++ b/Bootstrap-Portfolio/contact.html
@@ -1,52 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact | Basic Portfolio</title>
-    <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Portfolio</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	 
+	<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+
+<link rel="stylesheet" type="text/css" href="assets/css/TwoCol_bootstrap.css"> 
 </head>
 <body>
-    <header>
-        <div class="wrapper">
-            <h1>Aditya Shah</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
 
-<div class="wrapper">
-    <section id="center-column">
-        <h2>Contact</h2>
+<header class="header">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+     <button type="button" class="navbar-toggle" data-toggle="collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+     </button>
+      <a class="navbar-brand" href="#">Aditya Shah</a>
+    </div>
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="active"><a href="#">About</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contact.html">Contact</a></li> 
+      </ul>
+    </div>
+  </div>
+</nav>
+</header>
 
-       <form >
-           <label for="name">Name:</label>
-           <input type="text" name="name" id= "form-name" placeholder=" Enter Name">
-
-           <label for="email">Email:</label>
-           <input type="text" name="email" id= "form-email" placeholder=" Enter Email">
-
-           <label for="message">Message:</label>
-           <textarea name="message" id= "form-message"></textarea>
-
-           <button type ="submit">Submit Form</button>
-       </form> 
-    
-    </section>
-    
+<div class="container">
+	<div class="row" >
+		<div class="col-sm-9" style="background:#fff">
+			<h3 style="color:#4aaaa5">Contact</h3>
+			<hr>
+			<form>
+			 <div class="form-group">
+  				<label>Name</label>
+  				<input type="text" class="form-control" name="name" 
+  					placeholder="Aditya Shah">
+  			</div>
+  			 <div class="form-group">
+  				<label>Email</label>
+    			<input class="form-control" type="password" name="email" 
+    				placeholder="example@gmail.com">
+       		</div>
+    		 <div class="form-group">
+    			<label>Message</label>
+  				<textarea class="form-control" rows="5"></textarea>
+  			</div>
+  			 <div class="form-group">	
+  			 <button type="submit" class="btn btn-default" style="background:#4aaaa5">Submit</button>	
+  			</div>
+  			</form>
+  		</div>
+	</div>
 </div>
-<div class="clearfix"></div>
 
-<footer>
-    &copy;2018 Aditya Shah
-</footer>
+  <footer>
+    <div class="row">
+        <div class="col-lg-12">
+            <p>Copyright &copy; Aditya Shah</p>
+        </div>
+    </div>
+  </footer>
 
-</body>
 </html>
